--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "start:server": "nodemon --watch server server/index.mjs",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll --testMatch **/src/**/*.test.js",
+    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache --watchAll --testMatch **/src/**/*.test.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
