--- a/package.json
+++ b/package.json
@@ -1,72 +1,72 @@
 {
   "name": "testing",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
-  "proxy": "http://localhost:8000",
   "dependencies": {
     "@exuanbo/file-icons-js": "^3.3.0",
-    "@monaco-editor/react": "^4.4.6",
-    "@playwright/test": "^1.28.1",
-    "@primer/octicons-react": "^17.9.0",
-    "@prisma/client": "^4.7.0",
-    "@tailwindcss/forms": "^0.5.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "0.21.4",
+    "@primer/octicons-react": "^19.8.0",
+    "@prisma/client": "^5.4.2",
+    "@tailwindcss/forms": "^0.5.6",
+    "axios": "^1.5.1",
     "classnames": "^2.3.2",
-    "concurrently": "^7.6.0",
+    "concurrently": "^8.2.1",
     "cookie-session": "^2.0.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "msw": "^0.49.2",
-    "nodemon": "^2.0.20",
-    "playwright": "^1.28.1",
-    "prisma": "^4.7.0",
-    "prop-types": "^15.8.1",
+    "nodemon": "^3.0.1",
+    "prisma": "^5.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.4.4",
-    "react-router-dom": "^6.4.4",
-    "react-scripts": "5.0.1",
-    "react-split": "^2.0.14",
-    "swr": "^2.0.0",
-    "validate.js": "^0.13.1",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.16.0",
+    "swr": "^2.2.4",
+    "validate.js": "^0.13.1"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-svg-transformer": "^1.0.0",
+    "msw": "^1.3.2",
+    "postcss": "^8.4.31",
+    "react-test-renderer": "^18.2.0",
+    "tailwindcss": "^3.3.3",
+    "vite": "^4.4.5"
+  },
+  "scripts": {
+    "dev": "vite",
+    "start": "concurrently \"npm:start:server\" \"npm:start:client\"",
+    "start:client": "vite",
+    "start:server": "nodemon --watch server server/index.mjs",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "test": "jest --watchAll",
+    "test:debug": "jest --inspect-brk --runInBand --no-cache --watchAll"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "moduleNameMapper": {
+      "^.+\\.svg$": "jest-svg-transformer",
+      "^.+\\.(css|less|scss)$": "identity-obj-proxy"
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ]
   },
   "prisma": {
     "schema": "server/prisma/schema.prisma"
-  },
-  "scripts": {
-    "start": "concurrently \"npm:start:server\" \"npm:start:client\"",
-    "start:client": "react-scripts start",
-    "start:server": "nodemon --watch server server/index.mjs",
-    "build": "react-scripts build",
-    "test": "react-scripts test --watchAll --testMatch **/src/**/*.test.js",
-    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache --watchAll --testMatch **/src/**/*.test.js",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
   }
 }
