--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint": "^8.51.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "identity-obj-proxy": "^3.0.0",
@@ -43,7 +43,8 @@
     "postcss": "^8.4.31",
     "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "scripts": {
     "dev": "vite",
@@ -54,7 +55,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest --watchAll",
-    "test:debug": "jest --inspect-brk --runInBand --no-cache --watchAll"
+    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand"
   },
   "jest": {
     "testEnvironment": "jsdom",
